--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -135,7 +135,7 @@
 			</trans-unit>
 
 			<trans-unit id="upload.success">
-				<source>Extension '%1$s' has been released as %2$s.&lt;br&gt;Visit &lt;a href=&quot;https://typo3.org/extensions/repository/view/%1$s&quot; target=&quot;_blank&quot;&gt;typo3.org&lt;/a&gt; too take a look at it</source>
+				<source>Extension '%1$s' has been released as %2$s.&lt;br&gt;Visit &lt;a href=&quot;https://typo3.org/extensions/repository/view/%1$s&quot; target=&quot;_blank&quot;&gt;typo3.org&lt;/a&gt; to take a look at it</source>
 			</trans-unit>
 			<trans-unit id="upload.success.cli">
 				<source>Extension '%1$s' has been released to the typo3.org TER. see https://typo3.org/extensions/repository/view/%1$s for details</source>
